# brendi-fast-hackathon

./: .gitignore  README.md  docker-compose.frontend-dev.yml  docker-compose.yml  env.example  run-frontend-dev.sh
backend/: Dockerfile  health_check.py  langgraph.json  preload_insights.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c2cbbaf0747d_initial_schema.py
backend/app/: main.py
backend/app/cli/: ingest_data.py
backend/app/core/: buffer.py  config.py  database.py  dependencies.py  logging_config.py  redis.py
backend/app/graphs/: agent.py  insights.py
backend/app/graphs/nodes/: __init__.py  rag.py  tools.py
backend/app/graphs/tools/: __init__.py  analytics.py  calculator.py  rag.py
backend/app/graphs/utils/: __init__.py  formatting.py
backend/app/jobs/: send_message.py
backend/app/middleware/: tenant.py
backend/app/models/: __init__.py  campaign.py  chat.py  consumer.py  feedback.py  menu_event.py  order.py  store.py
backend/app/routers/: __init__.py
backend/app/routers/api/: __init__.py
backend/app/routers/api/v1/: __init__.py  analytics.py  chat.py  data.py  websocket.py
backend/app/schemas/api/v1/: __init__.py  analytics.py  chat.py  data.py
backend/app/services/: __init__.py  agent_service.py  analytics_service.py  cache_service.py  chroma_service.py  data_loader.py  document_compiler.py  embedding_service.py  rag_service.py
backend/app/workers/: __init__.py  worker.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  README-DEV.md  env.example  index.html  nginx.conf  package-lock.json  (+2 more)
(+25 files in other folders)
