[project]
name = "brendi-fast-hackathon-api"
version = "0.1.0"
dependencies = [
    "fastapi>=0.121.1",
    "gunicorn>=23.0.0",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "alembic>=1.14.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.0.1",
    "rq>=2.6.0",
    "chromadb>=0.5.0",
    "openai>=1.54.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=1.0.2",
    "greenlet>=3.2.4",
]
